--- a/TEST/frame/testreport/loginReport.html
+++ b/TEST/frame/testreport/loginReport.html
@@ -189,11 +189,11 @@ function showOutput(id, name) {
 
 <div class='heading'>
 <h1>登录网易邮箱测试报告</h1>
-<p class='attribute'><strong>Start Time:</strong> 2019-12-12 18:08:00</p>
-<p class='attribute'><strong>Duration:</strong> 0:00:28.576868</p>
+<p class='attribute'><strong>Start Time:</strong> 2019-12-13 00:53:25</p>
+<p class='attribute'><strong>Duration:</strong> 0:00:41.109853</p>
 <p class='attribute'><strong>Status:</strong> Pass 1 Failure 1</p>
 
-<p class='description'>用例执行情况（win7 64位）</p>
+<p class='description'>用例执行情况（win10 64位）</p>
 </div>
 
 
@@ -251,14 +251,14 @@ function showOutput(id, name) {
         <pre>
         
 ft1.2: Traceback (most recent call last):
-  File "/Users/sonic/Project/Python/TEST/frame/testcase/test_login.py", line 44, in test_right_login
+  File "E:\Work\Project\Python\TEST\frame\testcase\test_login.py", line 44, in test_right_login
     self.assertEqual(self.driver.title,"网易邮箱6.0版","登录失败")
 AssertionError: '网易帐号中心 &gt; 用户验证' != '网易邮箱6.0版'
 - 网易帐号中心 &gt; 用户验证
 + 网易邮箱6.0版
  : 登录失败
 Traceback (most recent call last):
-  File "/Users/sonic/Project/Python/TEST/frame/testcase/test_login.py", line 44, in test_right_login
+  File "E:\Work\Project\Python\TEST\frame\testcase\test_login.py", line 44, in test_right_login
     self.assertEqual(self.driver.title,"网易邮箱6.0版","登录失败")
 AssertionError: '网易帐号中心 &gt; 用户验证' != '网易邮箱6.0版'
 - 网易帐号中心 &gt; 用户验证
